--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-charts": "^6.19.5",
+    "@mui/x-data-grid": "^6.19.5",
+    "@mui/x-data-grid-generator": "^6.19.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2"
