--- a/project/package.json
+++ b/project/package.json
@@ -20,7 +20,8 @@
     "@mui/x-data-grid-generator": "^6.19.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
