--- a/project/package.json
+++ b/project/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^6.19.5",
     "@mui/x-data-grid": "^6.19.5",
     "@mui/x-data-grid-generator": "^6.19.5",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
